    main/Ag/Rakic.yml:
    main/Au/Rakic.yml:
    main/Cu/Rakic.yml:
    main/Al/Rakic.yml:
    main/Be/Rakic.yml:
    main/Cr/Rakic.yml:
    main/Ni/Rakic.yml:
    main/Pd/Rakic.yml:
    main/Pt/Rakic.yml:
    main/Ti/Rakic.yml:
    main/W/Rakic.yml:
    main/C/Djurisic-o.yml
    main/C/Djurisic-e.yml
  updates:
    main/TiO2/Devore-o.yml: references
    main/TiO2/Devore-e.yml: references
    main/H2O/Hale.yml: references
    main/NaI/Li.yml: comments, info
    main/N2/Griesmann.yml: comments, info
    main/SiO2/Malitson.yml: comments, info
    main/Ag/Windt.yml: references
    main/Au/Windt.yml: references
    main/Al/Ordal.yml: references
    main/Au/Ordal.yml: references
    main/Cu/Ordal.yml: references
    main/Ni/Ordal.yml: references
    main/Fe/Ordal.yml: references, comments
    main/Ti/Ordal.yml: references, comments
    main/Ta/Ordal.yml: references, comments
    main/W/Ordal.yml: references, comments
    main/Mo/Ordal.yml: references, comments
    organic/(C5H8O2)n - poly(methyl methacrylate)/Sultanova.yml: references, info
    organic/(C6H10O5)n - cellulose/Sultanova.yml: references, info
    organic/C8H8 - styrene/Sultanova.yml: references, info
    organic/(C8H8)n - polystyren/Sultanova.yml: references, info
    organic/(C16H14O3)n - polycarbonate/Sultanova.yml: references, info
    other/mixed organic/(C8H8)n-(C3H3N)m/Sultanova.yml: references, info
    other/commercial plastics/Optorez1330/Sultanova.yml: references, info
    other/commercial plastics/ZeonexE48R/Sultanova.yml: references, info
    other/commercial plastics/NAS-21/Sultanova.yml: references, info
  data re-arrangement
    new folder: "other/mixed crystals"
    other/mixed crystals/AlGaAs ---> other/semiconductor alloys/AlAs-GaAs
    other/mixed crystals/AlON ---> other/semiconductor alloys/AlN-Al2O3
    other/mixed crystals/AlGaSb ---> other/semiconductor alloys/AlSb-GaSb
    other/mixed crystals/GaInP ---> other/semiconductor alloys/GaP-InP
  miscellaneous