@@ -7,4 +7,4 @@ COMMENTS: "Extraordinary ray (e). 21 °C."
 DATA:
   - type: formula 4
     range: 0.45 0.70
-    coefficients: 2.358 1.929 2 0.05780 1
+    coefficients: 2.358 1.929 2 0.05780 1 0 0 0 1
