@@ -7,4 +7,4 @@ COMMENTS: "Extraordinary ray (e); Room temperature"
 DATA:
   - type: formula 4
     range: 0.43 1.53
-    coefficients: 7.197 0.3322 0 0.0843 1
+    coefficients: 7.197 0.3322 0 0.0843 1 0 0 0 1
