@@ -6,5 +6,5 @@ REFERENCES: "M. J. Rosker, K. Cheng, and C. L. Tang, Practical urea optical para
 DATA:
   - type: formula 4
     range: 0.3 1.06
-    coefficients: 2.1823 0.0125 0 0.0300 1
+    coefficients: 2.1823 0.0125 0 0.0300 1 0 0 0 1
 COMMENTS: "Room temperature. Ordinary ray (o)."
