@@ -6,4 +6,4 @@ REFERENCES: "G. Hettner and G. Leisegang. Dispersion of the mixed crystals TlBr-
 DATA:
   - type: formula 4
     range: 0.6 24
-    coefficients: 1 3.821 2 0.02234 2 0 1 0 1 -0.000877 2
+    coefficients: 1 3.821 2 0.02234 2 0 0 0 1 -0.000877 2
